<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvServerSocketAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/ivServerSocketImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:src="@mipmap/ic_launcher" />

    <ToggleButton
        android:id="@+id/togServerSocket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toggleServer"
        android:textOff="@string/exchange_images_start"
        android:textOn="@string/exchange_images_stop" />

</LinearLayout>
